--- a/flask-app/mtw/templates/manage.html
+++ b/flask-app/mtw/templates/manage.html
@@ -50,6 +50,16 @@ Manage
       </div>
     </div>
 
+    <div class="row mb-4">
+      <div class="col">
+        <h5>mesht: Predicates</h5>
+            <a href="{{ url_for('todo', tlist='mesht_predicates') }}" class="btn btn-info" role="button">
+              Show
+            </a>
+            <span class="text-info">[takes some time]</span>
+      </div>
+    </div>
+
     <ul class="list-inline mb-2">
       <li class="list-inline-item mt-2"><h4>Stats</h4></li>
       <li class="list-inline-item float-right">
