--- a/flask-app/mtw/templates/todo.html
+++ b/flask-app/mtw/templates/todo.html
@@ -30,6 +30,8 @@ ToDo
   {% if tlist_check in ('duplicates','duplicates_eng') %}
     {% set link_target = '_blank' %}
     {% include 'snips/duplicates.html' %}
+  {% elif tlist_check == 'mesht_predicates' %}
+    {% include 'snips/predicates.html' %}
   {% else %}
     {% set link_target = '_blank' %}
     {% include 'snips/results.html' %}
