--- a/flask-app/mtw/templates/manage.html
+++ b/flask-app/mtw/templates/manage.html
@@ -98,7 +98,7 @@ Manage
 
     <ul class="list-inline mb-2">
       <li class="list-inline-item mt-2">
-        <h4>Exports <small class="text-warning">Always do Checks before exports!</small></h4>
+        <h4>Exports <small class="text-warning">Always do Checks before!</small></h4>
       </li>
       <li class="list-inline-item float-right">
       </li>
@@ -154,10 +154,10 @@ Manage
 
     <div class="row mb-4">
       <div class="col">
-        <h5>Base &amp; Notes<small class="text-success"> [generate to enable more exports]</small></h5>
+        <h5>Base Exports<small class="text-success"> [generate to enable more exports]</small></h5>
           <form action="{{ url_for('update_stats', stat='lookups') }}" method="post">
             <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
-            <button class="btn btn-sm btn-success mb-2" type="submit" title="Create export Base file (JSON)" {{ export_disabled }}>
+            <button class="btn btn-sm btn-success mb-2" type="submit" title="Create Base-export file (JSON)" {{ export_disabled }}>
               Generate Base
                 </button>
 
@@ -173,14 +173,14 @@ Manage
 
           </form>
 
-          <form action="{{ url_for('update_stats', stat='lookups_notes') }}" method="post">
+          <form action="{{ url_for('update_stats', stat='lookups_rest') }}" method="post">
             <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
-            <button class="btn btn-sm btn-success mb-2" type="submit" title="Create export Notes file (JSON)" {{ export_disabled }}>
-              Generate Notes
+            <button class="btn btn-sm btn-success mb-2" type="submit" title="Create Base-rest file (JSON)" {{ export_disabled }}>
+              Generate Rest
                 </button>
 
-          {% if exports['lookups_notes'] %}
-            {% set file = exports['lookups_notes'] %}
+          {% if exports['lookups_rest'] %}
+            {% set file = exports['lookups_rest'] %}
             <p class="mb-1">
               [{{ file['fdate'] }}]
               <a href="{{ url_for('download', fname=file['fname']) }}" title="Download file" target="_blank">
@@ -241,11 +241,11 @@ Manage
             <div class="form-group mb-2">
               <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="radioMarcTreeDef" name="tree_style" value="def" class="custom-control-input" {{ def_checked }}>
-                <label class="custom-control-label" for="radioMarcTreeDef">Default tree (field 072)</label>
+                <label class="custom-control-label" for="radioMarcTreeDef">Default tree (fld 072)</label>
               </div>
               <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="radioMarcTreeCustom" name="tree_style" value="daw" class="custom-control-input" {{ daw_checked }}>
-                <label class="custom-control-label" for="radioMarcTreeCustom">Custom tree (field 686)</label>
+                <label class="custom-control-label" for="radioMarcTreeCustom">Custom tree (fld 686)</label>
               </div>
             </div>
 
@@ -342,6 +342,8 @@ Manage
     <div class="row mb-4">
       <div class="col">
         <h5>JSON <small class="text-info">for Elastic</small></h5>
+
+        {% if show_marc %}
           <form action="{{ url_for('update_stats', stat='js_elastic') }}" method="post">
             <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 
@@ -364,6 +366,7 @@ Manage
           {% endif %}
 
           </form>
+        {% endif %}
       </div>
     </div>
 
