--- a/flask-app/mtw/templates/intro.html
+++ b/flask-app/mtw/templates/intro.html
@@ -136,7 +136,7 @@ Intro
   </div>
   <div class="col-lg-7 col-md">
 
-    <h4 class="mb-4">Stats for {{ config.TARGET_YEAR }}  <small><a href="{{ url_for('todo', tlist='duplicates') }}" class="text-warning">Duplicate terms check</a></small>
+    <h4 class="mb-4">Stats for {{ config.TARGET_YEAR }}  <small><a href="{{ url_for('todo', tlist='duplicates') }}" class="text-warning" title="Check regularly!">Duplicate terms check</a></small>
     </h4>
 
     {% if show_stats %}
