--- a/flask-app/mtw/templates/modals/edit-concept.html
+++ b/flask-app/mtw/templates/modals/edit-concept.html
@@ -1,7 +1,7 @@
 {% set item_cui = item['cui'] %}
 
 <div class="modal fade conceptModal" id="editConcept-{{ item['cui'] }}" tabindex="-1" role="dialog" aria-labelledby="edit Concept" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
+  <div class="modal-dialog modal-xl" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title">{{ descriptor['labels']['en'] }}
