--- a/flask-app/mtw/templates/modals/edit-terms.html
+++ b/flask-app/mtw/templates/modals/edit-terms.html
@@ -1,6 +1,9 @@
 {% for term in terms %}
 
           {% set termId = random_id() %}
+          {% if term['tpid'] %}
+             {% set term_state = ' is-valid' %}
+          {% endif %}
 
           <input type="hidden"
                    name="term{{ termId }}___rowid"
@@ -17,7 +20,7 @@
           <div class="form-row termRow" id="{{ termInputRow }}">
             <div class="col-7">
               <label class="sr-only" for="termInput-{{ termId }}">Term</label>
-              <input type="text" class="form-control form-control-lg mb-2 termInput formInputChanged" id="termInput-{{ termId }}"
+              <input type="text" class="form-control form-control-lg mb-2 termInput formInputChanged {{ term_state }}" id="termInput-{{ termId }}"
                      data-formchanged="#formchanged-{{ item_cui }}"
                      name="term{{ termId }}___prefLabel"
                      maxlength="250" placeholder="{{ input_hint }}" value="{{ term['prefLabel'] }}" {{ input_required }}>
