--- a/flask-app/mtw/templates/_layout.html
+++ b/flask-app/mtw/templates/_layout.html
@@ -182,6 +182,7 @@
 
   <script src="{{url_for('static', filename='bootstrap/jquery-3.3.1.min.js')}}" type="text/javascript"></script>
   <script src="{{url_for('static', filename='bootstrap/bootstrap.bundle.min.js')}}" type="text/javascript"></script>
+  <script src="{{url_for('static', filename='jq-ui/jquery-ui.min.js')}}" type="text/javascript"></script>
   <script src="{{url_for('static', filename='js/custom.js')}}?v={{ config.APP_VER }}" type="text/javascript"></script>
 </body>
 </html>
