Refresh interval display

--- a/flask-app/mtw/templates/snips/stats.html
+++ b/flask-app/mtw/templates/snips/stats.html
@@ -358,6 +358,6 @@
 
 <div class="row mb-2">
   <div class="col">
-    <em>Stats generated:  initial {{ initial['date'] }}  --  actual {{ actual['date'] }}</em>
+    <em>Stats generated:  initial {{ initial['date'] }}  --  actual {{ actual['date'] }}  [refresh interval: {{ config.REFRESH_AFTER }}  min]</em>
   </div>
 </div>
