--- a/flask-app/mtw/templates/snips/concepts.html
+++ b/flask-app/mtw/templates/snips/concepts.html
@@ -32,9 +32,22 @@
             <i class="fas fa-plus"></i></button>
 
           {% elif item['status'] == 'OK' %}
-          <button type="button" class="btn btn-primary btn-sm ml-1" title="Edit translation"
-            data-toggle="modal" data-target="#editConcept-{{ item['cui'] }}" data-cui="{{ item['cui'] }}" >
-            <i class="fas fa-pen text-success"></i></button>
+
+            {% if not item.get('cpid') and item.get('tnote') and session.ugroup in ('admin') %}
+
+            <a href="{{ url_for('add_cpid', dui=dui, cui=item['cui']) }}">
+              <button type="link" class="btn btn-primary btn-sm ml-1" title="Generate custom CUI">
+                  <i class="fas fa-plus text-warning"></i>
+              </button>
+            </a>
+
+            {% endif %}
+
+            <button type="button" class="btn btn-primary btn-sm ml-1" title="Edit translation"
+                    data-toggle="modal" data-target="#editConcept-{{ item['cui'] }}" data-cui="{{ item['cui'] }}" >
+                    <i class="fas fa-pen text-success"></i>
+            </button>
+
           {% endif %}
 
           {% if item['scn'] and item['scnt'] %}
